<resources>
    <string name="app_name">Bartender</string>
    <string name="txt_title_bartender_home">Bartender - Home</string>
    <string name="txt_menu_item_search">Search</string>
    <string name="txt_menu_item_favourites">Favourites</string>
    <string name="txt_menu_item_shake">Shake!</string>
    <string name="txt_search_item_name">Name</string>
    <string name="txt_search_item_description">Description</string>
    <string name="txt_search_error">Error</string>
    <string name="txt_search_btn_retry">RETRY</string>
    <string name="txt_search_sw_query_hint">Search all cocktails…</string>
    <string name="txt_search_empty_error">Please enter something into the search field</string>
    <string name="txt_search_suggestion_item">Suggestion</string>
    <string name="txt_search_no_suggestions"><![CDATA[<…no current suggestions…>]]></string>
    <string name="txt_search_recent_searches">Recently searched for…</string>
    <string name="txt_search_content_description">thumbnails</string>
    <string name="txt_search_btn_add">ADD</string>
    <string name="txt_favourites_my_favourite_cocktails">My Favourite Cocktails</string>
    <string name="txt_favourites_tip_content">All your favourite cocktails are stored here. Try the shaker, to learn them!</string>
    <string name="txt_favourites_tv_description">Description</string>
    <string name="txt_favourites_saved_success">Successfully saved as favourite!</string>
    <string name="txt_shake_ingredient_text">Ingredient</string>
    <string name="search_btn_text_add">ADD</string>
    <string name="search_btn_text_remove">REMOVE</string>
    <string name="txt_database_success">Successfully cached to database!</string>
    <string name="txt_database_error">Error caching data to database :(</string>
    <string name="txt_favourites_success">Successfully added to favourites!</string>
    <string name="txt_favourites_error">Successfully removed from favourites!</string>
    <string name="txt_favourites_random_get">GET RANDOM!</string>
    <string name="txt_random_image_error">Error</string>
    <string name="txt_random_image_error_desc">Could not load image :(</string>
</resources>
