<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/favourites_status_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar

            android:id="@+id/favourites_pb_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/favourites_tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dm_default_margin"
            android:layout_marginEnd="@dimen/dm_default_margin"
            android:text="@string/txt_search_error" />

        <Button
            android:id="@+id/favourites_btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_search_btn_retry" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
        android:textSize="30sp"
        android:text="@string/txt_favourites_my_favourite_cocktails" />
    <TextView
        android:id="@+id/tv_favourites_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        android:text="@string/txt_favourites_tip_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>