<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/favourites_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_search_item_name"
        android:textSize="@dimen/dm_search_item_txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favourites_iv_thumb"
        android:layout_width="@dimen/dm_random_item_width"
        android:layout_height="@dimen/dm_random_item_height"
        android:layout_marginBottom="@dimen/dm_margin_bottom"
        android:contentDescription="@string/txt_search_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_tv_name"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/ic_splash_screen" />

    <TextView
        android:id="@+id/favourites_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_favourites_tv_description"
        android:textSize="@dimen/txt_text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_iv_thumb"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>