<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    app:cardCornerRadius="20dp"
    android:layout_width="200dp"
    android:layout_height="320dp"
    android:layout_marginTop="@dimen/dm_default_margin"
    android:layout_marginBottom="@dimen/dm_default_margin"
    android:elevation="@dimen/dm_default_elevation"
    android:padding="8dp"
    tools:targetApi="lollipop">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favourites_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_search_item_name"
            android:textSize="@dimen/dm_search_item_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favourites_iv_thumb"
            android:layout_width="140dp"
            android:layout_height="147dp"
            android:layout_marginBottom="140dp"
            android:contentDescription="@string/txt_search_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourites_tv_name"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/ic_splash_screen" />

        <TextView
            android:id="@+id/favourites_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_favourites_tv_description"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourites_iv_thumb"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>