<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holder_layout"
    app:cardCornerRadius="@dimen/dm_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dm_default_margin"
    android:layout_marginBottom="@dimen/dm_default_margin"
    android:elevation="@dimen/dm_default_elevation"
    android:padding="@dimen/dm_standard_padding"
    tools:targetApi="lollipop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/dm_search_item_nametext_height"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
            android:text="@string/txt_search_item_name"
            android:textSize="@dimen/dm_search_item_txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_thumb"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="@dimen/dm_search_image_width"
            android:layout_height="@dimen/dm_search_image_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            tools:src="@drawable/ic_splash_screen"
            android:contentDescription="@string/txt_search_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/submenu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/search_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_search_btn_add"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>